Refactor: Add the jar link in README.md